Fix spacing in menu drawer

--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -8,9 +8,10 @@
     justify-content: center;
     font-size: 20px;
     font-weight: 700;
-    margin-bottom: 12px;
     text-transform: uppercase;
+    margin-right: 15px;
 }
+
 .SplitSummary .Avatar {
     width: 50px;
     height: 50px;
