--- a/src/components/MenuDrawer/MenuDrawer.css
+++ b/src/components/MenuDrawer/MenuDrawer.css
@@ -6,7 +6,7 @@
     height: 100vh;
     background-color: white;
     box-shadow: 0px 16px 24px rgba(0, 0, 0, 30%);
-    padding-top: 40px;
+    padding-top: 80px;
     z-index: 6;
 }
 
@@ -18,7 +18,8 @@
     height: 24px;
     width: 24px;
     position: absolute;
-    top: 18px;
+    top: 40px;
+    transform: translate(0, -50%);
     right: 18px;
     background-color: transparent;
 }
@@ -31,6 +32,12 @@
     padding: 18px;
     padding-top: 0px;
     border-bottom: 1px solid rgba(0,0,0, 10%);
+}
+
+.Profile__user {
+    display: flex;
+    align-items: center;
+    margin-bottom: 18px;
 }
 
 .Profile__username  {
